resources/sass/calendar/print.scss
@media print {

    body {
        display:block !important;
        height: auto !important;
        min-height: auto !important;
        max-height: auto !important;
    }
    
    #content {
        display:block !important;
        position: relative !important;
        height: auto !important;
    }

    .event, #calendar_container {
        display:block !important;
        position: relative !important;
        background-color: white !important;
    }

    #top_follower{
        position:relative !important;
    }

    #calendar_container{
        max-height: auto !important;
        padding:0 !important;
        overflow-y: visible;
    }

    #calendar {
        display:block !important;
        position: relative !important;
    }

    .timespan_container {
        display:block !important;
        position: relative !important;
        page-break-after: always !important;
        page-break-inside: avoid !important;
        border:1px rgba(0,0,0,0.1) solid !important;
        box-shadow: none !important;
    }

    #top_follower{
        border:1px rgba(0,0,0,0.1) solid !important;
        border-top: 0 !important;
    }

}

